feat: backfill historical Tray orders
